--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         }
     </style>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 </head>
 <body>
 <div id="loader">
